test/org/midica/testfiles/failing/eff-cd-src-unknown-4.midica
INCLUDE inc/instruments.midica

0: ctrl_dest
0:   .src(ctrl=9999999999999999999999999999)
0:   .dest(vol,10%)
0:   .on()

